<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/red"
            app:title="Car Detail"
            app:titleTextColor="@color/red"
            app:titleTextAppearance="@style/CustomToolbarTitleStyle"
            android:navigationIcon="@drawable/back_icon" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/car_image"
                android:contentDescription="@string/image_description"
                tools:src="@tools:sample/avatars"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/car_name"
                tools:text="@string/dummy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/popbold"
                android:textSize="30sp"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/engine_capacity"
                android:drawableStart="@drawable/engine_icon"
                android:drawablePadding="10dp"
                tools:text="@string/dummy_text"
                android:fontFamily="@font/popreg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/fuel_type"
                android:drawableStart="@drawable/fuel_icon"
                android:drawablePadding="10dp"
                tools:text="@string/dummy_text"
                android:fontFamily="@font/popreg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/total_seat"
                android:drawableStart="@drawable/people_icon"
                android:drawablePadding="10dp"
                tools:text="@string/dummy_text"
                android:fontFamily="@font/popreg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/car_description"
                android:layout_width="wrap_content"
                tools:text="@string/dummy_text"
                android:fontFamily="@font/popreg"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/action_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/share"
                android:fontFamily="@font/popbold"
                android:layout_gravity="center"
                android:textColor="@color/red"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
